--- a/index.html
+++ b/index.html
@@ -7,6 +7,23 @@
         </title>
     </head>
     <body>
-        <h1>Hello World!</h1>
+        <div class="header">
+
+        </div>
+        <div class="gist">
+
+        </div>
+        <div class="randInf">
+
+        </div>
+        <div class="quote">
+
+        </div>
+        <div class="actionCall">
+
+        </div>
+        <div class="footer">
+            
+        </div>
     </body>
 </html>
