Establish css file and progress html structure

--- a/index.html
+++ b/index.html
@@ -3,18 +3,33 @@
     <head>    
         <meta charset="utf-8">
         <title>
-            TODO
+            The Filler Site
         </title>
     </head>
     <body>
         <div class="header">
-
+            <h3>Welcome!</h3>
+            <ul>
+                <li><a href="">header link one</a></li>
+                <li><a href="">header link two</a></li>
+                <li><a href="">header link three</a></li>
+            </ul>
         </div>
         <div class="gist">
+            <div class="gistText">
+                <h2>This website is awesome</h2>
+                This website has some subtext that goes here under the main title. 
+                It's a smaller font and the color is lower contrast
+            </div>
+            <div class="gistImage">
 
+            </div>
         </div>
         <div class="randInf">
-
+            <div class="randInfText">
+                Some random information.
+            </div>
+            
         </div>
         <div class="quote">
 
