--- a/index.html
+++ b/index.html
@@ -58,11 +58,15 @@
                 -Thor, God of Thunder
             </div>
         </div>
-        <div class="actionCall"> <!--TODO next-->
-
+        <div class="actionCall"> 
+            <div class="actionCallText">
+                <h5>Call to action! It's time!</h5>
+                Sign up for our product by clicking that button right over there!
+            </div>
+            <button type="button">Sign up</button>
         </div>
         <div class="footer">
-            Copyright © The Odin Project 2022
+            Copyright © wsmarshall courtesy of The Odin Project 2022
         </div>
     </body>
 </html>
