--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
         <title>
             The Filler Site
         </title>
+        <link rel="stylesheet" href="./style.css">
     </head>
     <body>
         <div class="header">
-            <h3>Welcome!</h3>
+            <h3>Header Logo</h3>
             <ul>
                 <li><a href="">header link one</a></li>
                 <li><a href="">header link two</a></li>
