--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
         <div class="header">
             <h3>Header Logo</h3>
             <ul>
-                <li><a href="">header link one</a></li>
-                <li><a href="">header link two</a></li>
-                <li><a href="">header link three</a></li>
+                <li><a href="">Header Link One</a></li>
+                <li><a href="">Header Link Two</a></li>
+                <li><a href="">Header Link Three</a></li>
             </ul>
         </div>
         <div class="gist">
             <div class="gistText">
                 <h2>This website is awesome</h2>
-                This website has some subtext that goes here under the main title. 
-                It's a smaller font and the color is lower contrast
+                <p>This website has some subtext that goes here under the main title. 
+                It's a smaller font and the color is lower contrast</p>
                 <button type="button">Sign Up</button>
             </div>
             <div class="gistImage">
